build/usd-sys/usd-c/include.in/pxr/usd/usd/usd_prim_flags.h

typedef struct pxrInternal_v0_21__pxrReserved____UsdPrim_t_s pxrInternal_v0_21__pxrReserved____UsdPrim_t;
typedef pxrInternal_v0_21__pxrReserved____UsdPrim_t pxr_UsdPrim_t;
enum pxrInternal_v0_21__pxrReserved____Usd_PrimFlags_e {
    pxr_Usd_PrimFlags_Usd_PrimActiveFlag = 0,
    pxr_Usd_PrimFlags_Usd_PrimLoadedFlag = 1,
    pxr_Usd_PrimFlags_Usd_PrimModelFlag = 2,
    pxr_Usd_PrimFlags_Usd_PrimGroupFlag = 3,
    pxr_Usd_PrimFlags_Usd_PrimAbstractFlag = 4,
    pxr_Usd_PrimFlags_Usd_PrimDefinedFlag = 5,
    pxr_Usd_PrimFlags_Usd_PrimHasDefiningSpecifierFlag = 6,
    pxr_Usd_PrimFlags_Usd_PrimInstanceFlag = 7,
    pxr_Usd_PrimFlags_Usd_PrimHasPayloadFlag = 8,
    pxr_Usd_PrimFlags_Usd_PrimClipsFlag = 9,
    pxr_Usd_PrimFlags_Usd_PrimDeadFlag = 10,
    pxr_Usd_PrimFlags_Usd_PrimPrototypeFlag = 11,
    pxr_Usd_PrimFlags_Usd_PrimInstanceProxyFlag = 12,
    pxr_Usd_PrimFlags_Usd_PrimPseudoRootFlag = 13,
    pxr_Usd_PrimFlags_Usd_PrimNumFlags = 14,
};
typedef unsigned int pxr_Usd_PrimFlags;
typedef struct pxrInternal_v0_21__pxrReserved____Usd_Term_t_s {
    pxr_Usd_PrimFlags flag;
    _Bool negated;
} USD_CPPMM_ALIGN(4) pxrInternal_v0_21__pxrReserved____Usd_Term_t;
typedef pxrInternal_v0_21__pxrReserved____Usd_Term_t pxr_Usd_Term_t;
typedef struct pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsPredicate%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsPredicate%) pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_t;
typedef pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_t pxr_Usd_PrimFlagsPredicate_t;
/** Conjunction of prim flag predicate terms.

Usually clients will implicitly create conjunctions by &&-ing together flag
predicate terms.  For example:
\code
// Get all loaded model children.
prim.GetFilteredChildren(UsdPrimIsModel && UsdPrimIsLoaded)
\endcode

See primFlags.h for more details. */
typedef struct pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsConjunction%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsConjunction%) pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_t;
typedef pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_t pxr_Usd_PrimFlagsConjunction_t;
/** Disjunction of prim flag predicate terms.

Usually clients will implicitly create disjunctions by ||-ing together flag
predicate terms.  For example:
\code
// Get all deactivated or undefined children.
prim.GetFilteredChildren(!UsdPrimIsActive || !UsdPrimIsDefined)
\endcode

See primFlags.h for more details. */
typedef struct pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_t_s {
    char data[%SIZEpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsDisjunction%];
} USD_CPPMM_ALIGN(%ALIGNpxrInternal_v0_21__pxrReserved__::Usd_PrimFlagsDisjunction%) pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_t;
typedef pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_t pxr_Usd_PrimFlagsDisjunction_t;
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_Term_ctor(
    pxr_Usd_Term_t * this_
    , pxr_Usd_PrimFlags flag);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_Term_ctor_1(
    pxr_Usd_Term_t * this_
    , pxr_Usd_PrimFlags flag
    , _Bool negated);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_Term_op_neg(
    pxr_Usd_Term_t const * this_
    , pxr_Usd_Term_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_Term__eq(
    pxr_Usd_Term_t const * this_
    , _Bool * return_
    , pxr_Usd_Term_t other);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_Term__ne(
    pxr_Usd_Term_t const * this_
    , _Bool * return_
    , pxr_Usd_Term_t other);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_Term_copy(
    pxr_Usd_Term_t * this_
    , pxr_Usd_Term_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_Term_dtor(
    pxr_Usd_Term_t * this_);
/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_sizeof();
/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_alignof();
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_ctor(
    pxr_Usd_PrimFlagsPredicate_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_ctor_1(
    pxr_Usd_PrimFlagsPredicate_t * this_
    , pxr_Usd_PrimFlags flag);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_ctor_2(
    pxr_Usd_PrimFlagsPredicate_t * this_
    , pxr_Usd_Term_t term);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_Tautology(
    pxr_Usd_PrimFlagsPredicate_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_Contradiction(
    pxr_Usd_PrimFlagsPredicate_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_TraverseInstanceProxies(
    pxr_Usd_PrimFlagsPredicate_t * this_
    , pxr_Usd_PrimFlagsPredicate_t * * return_
    , _Bool traverse);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_IncludeInstanceProxiesInTraversal(
    pxr_Usd_PrimFlagsPredicate_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_func(
    pxr_Usd_PrimFlagsPredicate_t const * this_
    , _Bool * return_
    , pxr_UsdPrim_t const * prim);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_copy(
    pxr_Usd_PrimFlagsPredicate_t * this_
    , pxr_Usd_PrimFlagsPredicate_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate_dtor(
    pxr_Usd_PrimFlagsPredicate_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsPredicate__assign(
    pxr_Usd_PrimFlagsPredicate_t * this_
    , pxr_Usd_PrimFlagsPredicate_t * * return_
    , pxr_Usd_PrimFlagsPredicate_t const * rhs);
/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_sizeof();
/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_alignof();
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_Tautology(
    pxr_Usd_PrimFlagsPredicate_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_Contradiction(
    pxr_Usd_PrimFlagsPredicate_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_TraverseInstanceProxies(
    pxr_Usd_PrimFlagsConjunction_t * this_
    , pxr_Usd_PrimFlagsPredicate_t * * return_
    , _Bool traverse);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_IncludeInstanceProxiesInTraversal(
    pxr_Usd_PrimFlagsConjunction_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_func(
    pxr_Usd_PrimFlagsConjunction_t const * this_
    , _Bool * return_
    , pxr_UsdPrim_t const * prim);
/** Default constructed conjunction is a tautology. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_ctor(
    pxr_Usd_PrimFlagsConjunction_t * this_);
/** Construct with a term. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_ctor_1(
    pxr_Usd_PrimFlagsConjunction_t * this_
    , pxr_Usd_Term_t term);
/** Add an additional term to this conjunction. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_op_bit_and_assign(
    pxr_Usd_PrimFlagsConjunction_t * this_
    , pxr_Usd_PrimFlagsConjunction_t * * return_
    , pxr_Usd_Term_t term);
/** Negate this conjunction, producing a disjunction by De Morgan's law.
For instance:

\code
!(UsdPrimIsLoaded && UsdPrimIsModel)
\endcode

Will negate the conjunction in parens to produce a disjunction
equivalent to:

\code
(!UsdPrimIsLoaded || !UsdPrimIsModel)
\endcode

Every expression may be formulated as either a disjunction or a
conjuction, but allowing both affords increased expressiveness. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsConjunction_op_neg(
    pxr_Usd_PrimFlagsConjunction_t const * this_
    , pxr_Usd_PrimFlagsDisjunction_t * return_);
/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_sizeof();
/** returns the size of this type in bytes */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____Usd_PrimFlagsDisjunction_alignof();